# django-boilerplate

./: .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.test.yaml  docker-compose.yaml  docker-entrypoint.sh  manage.py  pyproject.toml
.githooks/: pre-commit
database_scripts/: init_dev.sql  testing_init.sql
docs/: swagger.json
helpers/: apps.py  middleware.py  mixins.py  schemas.py  serializers.py  urls.py  views.py
helpers/management/: constants.py  docker_compose.py
helpers/management/commands/: clear_database.py  clear_pycache.py  get_logs.py  list_containers.py  run_in_docker.py  run_tests_in_docker.py  stop_docker.py
helpers/migrations/: 0001_initial.py
helpers/models/: __init__.py  abstract_models.py
project/: urls.py
project/settings/: base.py  dev.py  local.py  prod.py  testing.py
tests/classes/: mock_classes.py
tests/fixtures/: __init__.py  general.py
tests/helpers/: conftest.py  test_api.py  test_data_migrations.py  test_middleware.py  test_mixins.py
tests/helpers/snapshots/: snap_test_middleware.py
